Arranged view.html for tours, fixed the collapsing of navbar

--- a/tours/static/styles/main.scss
+++ b/tours/static/styles/main.scss
@@ -18,6 +18,7 @@ html, body {
   height: 100%;
   // overflow: hidden;
   margin: 0;
+  background-color: #a72121 ;
 }
 
 img {
